--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -221,6 +221,14 @@ PB_Culture_Igbo_tt:0 "Igbo"
 PB_Culture_Kanembu_tt:0 "Kanembu"
 PB_Culture_Sara_tt:0 "Sara"
 
+# OCEANIA #
+
+PB_Culture_Australian_tt:0 "Australian"
+PB_Culture_Australien_tt:0 "Australien"
+PB_Culture_Aboriginal_tt:0 "Aboriginal"
+PB_Culture_New_Hollander_tt:0 "New Hollander"
+PB_Culture_Kiwi_tt:0 "Kiwi"
+
 ## -------- Expanded Lore -------- ##
 
 PB_Culture_Expanded_Lore_tt:0 "This state's majority culture is: §Y[get_PB_Culture_Loc]§!"
@@ -442,4 +450,12 @@ PB_Culture_Yoruba_tt_delayed:0 ""
 PB_Culture_Hausa_tt_delayed:0 ""
 PB_Culture_Igbo_tt_delayed:0 ""
 PB_Culture_Kanembu_tt_delayed:0 ""
-PB_Culture_Sara_tt:0 "Sara"
+PB_Culture_Sara_tt_delayed:0 ""
+
+# OCEANIA #
+
+PB_Culture_Australian_tt_delayed:0 ""
+PB_Culture_Australien_tt_delayed:0 ""
+PB_Culture_Aboriginal_tt_delayed:0 ""
+PB_Culture_New_Hollander_tt_delayed:0 ""
+PB_Culture_Kiwi_tt_delayed:0 ""
