--- a/localisation/english/PB_War_Outcome_Events_l_english.yml
+++ b/localisation/english/PB_War_Outcome_Events_l_english.yml
@@ -62,3 +62,7 @@ waroutcome.18.t:0 "The Future of Indochina"
 waroutcome.18.d:0 "Although we have defeated the North Vietnamese rebellion we cannot allow the people of Indochina to ever have the mere inclination to betray their British overlords. To avoid another potential uprising some in our cabinet are suggesting that we grant the region a greater level of autonomy and representation in the Imperial Confederation, or we could just stick to the old way of things."
 waroutcome.18.a:0 "Partition the former French colonies into client states"
 waroutcome.18.b:0 "Vietnam and Cambodia will remain under direct administration"
+
+waroutcome.27.t:0 "Defeat in the Rif War"
+waroutcome.27.d:0 "We have lost control of Ceuta-Merlilla. Despite all our efforts we have effectively lost all authority in the Rif. We have lost hundreds of soldiers for nothing and abonded thousand tons of equipment. We have lost against the Moroccons. The people do not trust the army and state anymore for a Second Campaign and the threat of a revolution is high. To guarentee the continuation of our Holy Order we have to accept defeat."
+waroutcome.27.a:0 "We planned to be there for a short time anyway."
