--- a/localisation/english/PB_CoE_l_english.yml
+++ b/localisation/english/PB_CoE_l_english.yml
@@ -1,25 +1,19 @@
 ﻿l_english:
 
   PB_CoE_Conference_of_Europe:0 "The Conference of Europe"
-  PB_CoE_Conference_of_Europe_desc:0 "\n\n\n\n\n\nThe second war that has decimated Europe in 20 years has finally come to an end. Cities now resemble smoldering graveyards, while entire villages have been wiped off the map, either due to national projects of achieving \"natural populations\" or due to the hellish machines and innovations unleashed upon the continent during the war. Roads and railways are broken and beyond repair, while industrious factories now seem abandoned. \n\nWith the powers that challenged the status quo now destroyed, Britain, Germany and their allies now seek to partition the pie correctly. It remains to be seen how possible that will be, as some seek revenge for the devestation or national humiliation, while others seek to bring unity to a divided Europe. \n\nCurrent Topic of the Conference: [Coe_get_topic] \n\nCurrent Proposal: [Coe_get_proposal] \n\nCurrent additions to the proposal: [Coe_get_changes1] [Coe_get_changes2] [Coe_get_changes3] [Coe_get_changes4] [Coe_get_changes5]\n\nCurrent chance of §Gapproval§! of the proposal: \nGermany [GER.GetFlag]: [get_chance_variable_ger] \nBritain [ENG.GetFlag]: [get_chance_variable_eng] \nTurkey [TUR.GetFlag]: [?TUR.Chance_Vote|%0] \n[if_italy_is_ally]"
-  PB_CoE_Add_A_Demilitarization_Clause:0 "Add Extensive Demilitarisation Clause"
+  PB_CoE_Conference_of_Europe_desc:0 "\n\n\n\n\n\nThe second war that has decimated Europe in 20 years has finally come to an end. Cities now resemble smoldering graveyards, while entire villages have been wiped off the map, either due to national projects of achieving \"natural populations\" or due to the hellish machines and innovations unleashed upon the continent during the war. Roads and railways are broken and beyond repair, while industrious factories now seem abandoned. \n\nWith the powers that challenged the status quo now destroyed, Britain, Germany and their allies now seek to partition the pie correctly. It remains to be seen how possible that will be, as some seek revenge for the devestation or national humiliation, while others seek to bring unity to a divided Europe. \n\nCurrent Topic of the Conference: [Coe_get_topic] \n"
+  PB_CoE_Add_A_Demilitarization_Clause:0 "Demilitarisation of French Society"
   PB_CoE_Add_A_Demilitarization_Clause_desc:0 "To placate the German diplomats, we may introduce an extensive plan to demilitarise the French state to the Dexter Plan. This will hinder French capabilities to build autopods, tanks, artillery, bio-genetic weaponry, airplanes and any military-grade ship or submarine. While it may prove to be the hand the Germans needed to approve of this plan, it would seriously neuter a friendly French military in the forseeable future."
-  PB_CoE_Allow_Lorraine_Occupation:0 "Allow Lorraine Occupation"
+  PB_CoE_Allow_Lorraine_Occupation:0 "Question of Lorraine"
   PB_CoE_Allow_Lorraine_Occupation_desc:0 "It seems unlikely that the Germans would be satisfied with simply keeping the current borders with France untouched. A compromise needs to be made, allowing the continued occupation of the previously demilitarised province of Lorraine by German forces. Britain will approve of the Lorraine occupation for at least 100 years, unless Germany decides to relinquish its control over the territory in the future."
   PB_CoE_A_Jewish_Homeland:0 "Discuss a Jewish Homeland"
   PB_CoE_A_Jewish_Homeland_desc:0 "The Jewish people have suffered immensely under the French regime, seeing insane forms of persecution. While a rather unorthodox proposal, a few German diplomats have proposed to grant the Jewish people a part of France as repayment for the unethical and immoral projects targetting French jews of the former French government."
   PB_CoE_GER_choose_place_for_israel:0 "Pick [FROM.GetName] as Jewish Homeland"
   PB_CoE_GER_choose_place_for_israel_desc:0 "Coastal, a nice climate and small: this territory is the perfect homeland for the Jewish people!"
-  PB_CoE_Divide_the_Regions:0 "Discuss Spheres of Influence"
+  PB_CoE_Divide_the_Regions:0 "Division of France"
   PB_CoE_Divide_the_Regions_desc:0 "While our proposal may initially be unappealing to the British delegation, perhaps we can smoothen the tension with a little dividing and conquering? The establishment of new states in France allows all debating parties to carve up a small sphere of influence in the region. Perhaps by giving the Brits a piece of the pie, they may be less hesitant to support the Schwarz proposal?"
-  PB_CoE_Implement_Full_Deindustrialisation:0 "Fully Implement Schwarz's Vision"
+  PB_CoE_Implement_Full_Deindustrialisation:0 "Total Deindustrialisation"
   PB_CoE_Implement_Full_Deindustrialisation_desc:0 "Schwarz, in his essay on France, draws an interesting picture of how Germany could completely dominate France for the next thousand years. Calling it \"turning back the clock\", this euphemistic phrase describes the systematic destruction of France's industrial capabilities, ranging from civilian production to the extraction of heavy resources. Through total deindustrialisation, France can be tied to a German market and remain subservient for the next decade to come."
-  PB_CoE_Brittany_as_Bribe:0 "The Brittany Deal"
-  PB_CoE_Brittany_as_Bribe_desc:0 "With the British still not convinced of the Schwarz Proposal, a perhaps drastic measure has to be used. In the closed rooms of Palace Het Loo, a deal can be made between Britain and Germany that gives the Brits the liberty to integrate Brittany into their sphere. While it doesn't befit our diplomatic image to throw a previous ally to the sharks, we have no other option (at least, not an option we are willing to take)."
-  PB_CoE_Take_Lorraine_Region:0 "Watch beyond Elsass"
-  PB_CoE_Take_Lorraine_Region_desc:0 "We are the victors of the second Great War and, as the saying goes, to the victor goes the spoils! Lorraine and Franche-Comté are exactly the kind of spoils we desire, so we will take the opportunity to seize the regions from a potential Burgundian state, when our proposal is agreed upon."
-  PB_CoE_The_Rest_of_Papua:0 "North Papua for Approval"
-  PB_CoE_The_Rest_of_Papua_desc:0 "The situation has become beyond tense in Het Loo, as the Brits still aren't that on board with our Schwarz proposal. With even our most veteran diplomats unsure of the British response, the idea has been opted to basically bribe the British with the rest of the island of Papua, exchanging it for guaranteed approval for the Schwarz proposal."
   PB_CoE_Independent_Normandy_Compromise:0 "The Rouen Compromise"
   PB_CoE_Independent_Normandy_Compromise_desc:0 "To create such a powerful state in continental Europe is begging to destroy the delicate balance of power in the eyes of the British. While supportive of their German allies, the Brits will need some guarantee in the form of a bufferstate to keep the two great powers at some distance. Establishing an independent and neutral Normandy may do the trick."
   PB_CoE_A_Small_Occitan_State:0 "The Pau-Toulouse-Nimes Concept"
@@ -36,27 +30,6 @@
   Coe_get_topic_Poland:0 "§GPoland§!"
   Coe_get_topic_Baltics:0 "§GBaltics§!"
 
-  Coe_no_current_proposal:0 "§gNo Current Proposal§!"
-  Coe_get_proposal_dexter:0 "§YDexter Plan§! \n\nFrance's pre-war borders will be restored, with the exception of Pas de Calais going to Wallonia [WLA.GetFlag]. French industry will be directly divided and watched over by the main members of the League of Nations."
-  Coe_get_proposal_schwarz:0 "§YSchwarz Proposal§! \n\nPre-war France will lose Pas de Calais to Wallonia [WLA.GetFlag]and will be divided into its four fundamental regions: Occitania [OCT.GetFlag], Burgundy [BRG.GetFlag], Normandy [NRM.GetFlag] and the Seine Region."
-  Coe_get_proposal_francia:0 "§YProject \"Francia\"§! \n\nFrance [FRA.GetFlag]and Germany [GER.GetFlag] will unify under a single government, its capital located in Köln. Wallonia [WLA.GetFlag] receives Pas de Calais as reparation. §RNo war reparations can be expected from France if this plan is put in motion§!."
-  Coe_get_proposal_spr_restoration:0 "§YNew Regime Plan§! \n\nSpain [SPR.GetFlag]will be restored in full, sans the Basque country [BSQ.GetFlag]under the rule of a friendly monarchy."
-  Coe_get_proposal_spr_partition:0 "§YThe Madeira Compromise§! \n\nSpain [SPR.GetFlag]is divided vertically between two friendly monarchies, partitioning the country under British and German rule."
-  Coe_get_proposal_spr_buffer_partition:0 "§YBadajoz-Zaragoza Line§! \n\nSpain [SPR.GetFlag]is divided into spheres of influence, with Asturias falling under British control and Catalonia and Andalusia under German control. The remainder of Spain is forced to demilitarised and acts as a neutral buffer."
-
-  Coe_get_changes_lorraine:0 "\n- Continued German [GER.GetFlag]occupation of Lorraine"
-  Coe_get_changes_demilitarisation:0 "\n- Extensive demilitarisation of the French state"
-  Coe_get_changes_israel:0 "\n- The establishment of Israel [ISR.GetFlag] on French soil"
-  Coe_get_changes_schwarz_divide:0 "\n- The new states will be divided among the victors"
-  Coe_get_changes_schwarz_brittany:0 "\n- Brittany [BRT.GetFlag]will be part of the British sphere of influence"
-  Coe_get_changes_schwarz_papua:0 "\n- North Papua will be transfered over to Victoria [VIC.GetFlag]"
-  Coe_get_changes_schwarz_lorraine:0 "\n- Germany [GER.GetFlag] will maintain its occupation of Lorraine and Franche-Comté"
-  Coe_get_changes_schwarz_vision:0 "\n- A German-led committee will oversee the complete deindustrialisation of former French territory"
-
-  Coe_italy_is_ally:0 "Italy [ITA.GetFlag]: [?ITA.Chance_Vote|%0]"
-  Coe_Germany_votes:0 "[?GER.Chance_Vote|%0]"
-  Coe_England_votes:0 "[?ENG.Chance_Vote|%0]"
-
   Coe_proposed_plan:0 "§YProposed the Plan§! (Automatic §GApproval§!)"
 
   PB_COE_PROPOSAL_DEXTER:0 "The \"§YDexter Plan§!\" is currently discussed."
@@ -68,14 +41,8 @@
   PB_COE_FRANCIA_LARGE_OCT:0 "Has proposed the establishment of a §Glarger§! Occitan state."
   PB_COE_FRANCIA_SMALL_OCT:0 "Has proposed the establishment of a §Rsmaller§! Occitan state."
 
+  COE_ISRAEL_PICK_STATE:0 "§YEstablish a Jewish homeland in a French state§!."
   COE_ISRAEL_IN_FRANCE:0 "A state has been picked for a Jewish homeland"
-
-  PB_COE_GER_MORE_CHANCE:0 "§YGermany§! [GER.GetFlag]will be more likely to approve of this proposal, increasing the chance of a \"§GYes§!\" vote by [?Chance_Vote_Temporary|%+0]"
-  PB_COE_ENG_MORE_CHANCE:0 "§YBritain§! [ENG.GetFlag]will be more likely to approve of this proposal, increasing the chance of a \"§GYes§!\" vote by [?Chance_Vote_Temporary|%+0]"
-  PB_COE_TUR_MORE_CHANCE:0 "§YThe Ottoman Empire§! [TUR.GetFlag]will be more likely to approve of this proposal, increasing the chance of a \"§GYes§!\" vote by [?Chance_Vote_Temporary|%+0]"
-  PB_COE_ITA_MORE_CHANCE:0 "§YItaly§! [ITA.GetFlag]will be more likely to approve of this proposal, increasing the chance of a \"§GYes§!\" vote by [?Chance_Vote_Temporary|%+0]"
-  
-
 
   #Events
 
@@ -115,6 +82,15 @@
   COE.20.t:0 "Conference of Europe: Ending the France Debate"
   COE.20.d:0 "A few exasperated sighs filled the small room in Palace Het Loo, as diplomats and government figures neatly compiled their papers once again into their briefcases. The first round of discussions had concluded and the topic of France was settled. \n\nAs coffee, tea and some light celebratory wine was offered to the many men standing in the halls of Het Loo, the fate of Europe was closer to being further constructed."
   COE.20.a:0 "And the curtains close on this debate"
+  COE.21.t:0 "Conference of Europe: Wallonia demands Reparations"
+  COE.21.d:0 "As the conference started, one of the first delegations to loudly declare its national victimhood was from Wallonia. Despite the general sentiment among the diplomats at the conference that large parts of Walloon society wasn't opposed to French unification, the Walloon delegation was given the same patience and attention as every other delegation. During their time, they declared the horrors of French occupation to have been of exceptional degree in Wallonia, allowing the Walloon delegation to demand serious reparations from France. \n\nThe negotations about these reparations have gone from industrial reparations to even territory, but a conclusion has yet to be found."
+  COE.21.a:0 "We won't give these \"victims\" anything"
+  COE.21.b:0 "They will have to be happy with reparations"
+  COE.21.c:0 "Grant them the Pas de Calais"
+  COE.22.t:0 "Conference of Europe: Jewish Victims Fund"
+  COE.22.d:0 "The war has had an immense impact on every European, soldier and civilian alike. However, certain groups of people have suffered excessive discrimination, persecution and worse under the French regime. Both the delegation of European Jews as the delegation of the zionist organization have had their time during the conference too, both describing the extreme measures of the French dictatorship against European jews, backed by various international humanist organizations and the information gathered by imperial divisions that liberated Alpine work camps. \n\nThe question now seems to be if giving the Jewish people a homeland is enough, or if a serious reparation fund needs to be placed on the French government for its inhumane treatment of its Jewish citizens and other Jewish civilians during the war."
+  COE.22.a:0 "We can't place too much burden on the French..."
+  COE.22.b:0 "The French will pay for their crimes"
 
   COEDEXTER.1.t:0 "The Discussion of a Jewish Homeland"
   COEDEXTER.1.d:0 "As British diplomats seek to further placate us with their Dexter Plan, the proposal of German diplomats to carve some territory away from France and give it to the Jewish people has been given the green light by the Brits. The Jewish people have suffered immensely under the French dictatorship, seeing themselves stripped from citizenship, property and sometimes their lives. The least we can do is come together and repay the Jewish people, a globally persecuted people, with their own homeland in France. \n\nThe question now remains which French state to grant the Jewish people. Preferably, the territory has a coast and isn't already claimed by another country."
@@ -162,6 +138,9 @@
   PB_Constitutionally_Enshrined_Neutrality_desc:0 "The neutrality of this nation is enshrined in its constitution and the treaty that established this country. Recognised by the international community, the neutrality of this nation is almost sacred."
   PB_Purged_Administration:0 "Purged Bureaucracy"
   PB_Purged_Administration_desc:0 "As part of the peace treaty, many figures of the previous government were barred from holding public office during their lifetime, seriously draining the pool of capable bureaucrats, politicians and diplomats in our country. It will take some time before inexperienced state employees can rise to the same level of expertise as the previous administration."
+
+  PB_War_Reps_Dynamic_Modifier:0 "War Reparations"
+  PB_War_Reps_Dynamic_Modifier_desc:0 "This nation has been absolutely defeated during the Second Great War and is now forced to pay for its destruction. Every month, the reserves are slowly growing more empty as the bill for destroyed buildings, smoking craters, civilian suffering and more is imposed on this country."
 
   RANIERI_DESC:0 "Italy has been defeated, dismantled and decimated. Sons and fathers have died and widows are all that are left. Germany and Britain, filled with a need for revenge against the aggressors of the second Great War, took Italy's destiny from its own hands and chained the Italian people to artificial creations, such as the new Kingdom of Two Sicilies. The recent crowning of king Ranieri I came when his brother, Ferdinand Pius, refused to rule over this artificial creation of a kingdom, stating that he would only represent the Italian people and not any bastardized form of this concept. Ranieri was the second choice, pressured by the British to accept the crown and rule this petty fiefdom as nothing more than a puppet of London. \n\nSecluded to his luxurious palaces in Naples, Ranieri can only watch as the incompetent government appointed by the Brits after the peace struggle to reconstruct the South of Italy after the war. Poverty, famine and disease plague these lands, which he may call himself a petty king of. A petty king, with petty aspirations, sitting in his petty castle." 
   PIETRO_DESC:0 "Following in the footsteps of the kings of medieval Northern Italy, claimant to the Iron Crown of Lombardy, Pietro II is far from as mythical as these kings. A relative to the German king, Peter Ferdinand changed his name to Pietro to emulate the habsburgs of Tuscany before him, claiming a mantle that has limited attachment to him personally. \n\nPietro II is a king more hated than loved. A foreign replacement imposed on the proud people of Northern Italy, roleplaying as an Italian monarch while disrespecting the symbols of Northern Italy, such as the Iron Crown and the legacy of the Lombardian people. It remains to be seen how long Pietro II can remain in power." 
